文字が小さい問題の改善

--- a/src/app/components/keyboard-svg/keyboard-svg.component.html
+++ b/src/app/components/keyboard-svg/keyboard-svg.component.html
@@ -82,8 +82,8 @@
               [attr.y]="y + 20"
               text-anchor="middle"
               [attr.fill]="style.text"
-              font-size="14"
-              opacity="0.7"
+              font-size="20"
+              font-weight="500"
             >{{ parsed.sublabel }}</text>
           }
           @if (display.sub) {
